--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,8 +16,18 @@
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
   <meta name="theme-color" content="#7367f0" />
   <meta name="apple-mobile-web-app-status-bar-style" content="#7367f0">
-  <link rel="stylesheet" type="text/css" href="/css/stylesheet.min.css" media="all" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" media="all" async />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap&text=abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-%C2%A9,.20217+%27"
+    as="style" onload="this.onload=null;this.rel='stylesheet'" media="screen" />
+  <noscript>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap&text=abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-%C2%A9,.20217+%27"
+      rel="stylesheet" type="text/css" media="screen" />
+  </noscript>
+  <link rel="stylesheet" type="text/css" href="/css/stylesheet.min.css" media="screen" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" media="screen" async />
 
 <body>
   <%- include ("home") -%>
