--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,7 @@
   <hr class="purple" style="width: 50%; filter: blur(1px);" />
   <%- include ("projects", {projects: projects}) -%>
   <footer class=" footer text-center">
-    This website is a member of the <a href="https://1mb.club/" target="_blank" rel="noopener noreferrer">1MB club</a> and is <a href="https://github.com/a-vorontsov/a-vorontsov.github.io" target="_blank" rel="noopener noreferrer">open-source</a>
+    This website is a member of the <a href="https://1mb.club/" class="purple bold" target="_blank" rel="noopener noreferrer">1MB club</a> and is <a href="https://github.com/a-vorontsov/a-vorontsov.github.io" class="purple bold" target="_blank" rel="noopener noreferrer">open-source</a>
   </footer>
 </body>
 
