--- a/src/home.ejs
+++ b/src/home.ejs
@@ -6,8 +6,8 @@
       </div>
       <div class="p--8">
         <p>
-          Graduate Software Engineer at <a href="https://www.visa.co.uk/" target="_blank" rel="noopener noreferrer"
-            class="purple bold">Visa</a>
+          Software Engineer at <a href="https://poly.ai/" target="_blank" rel="noopener noreferrer"
+            class="purple bold">PolyAI</a>
         </p>
         <p>
           <code>printf "%s@%s.co.uk" "aleksandr" "vorontsov"</code>
