Add job to desc

--- a/src/home.ejs
+++ b/src/home.ejs
@@ -6,6 +6,10 @@
       </div>
       <div class="p--8">
         <p>
+          Full Stack Engineer at <a href="https://artificial.io/" target="_blank" rel="noopener noreferrer"
+            class="purple bold">Artificial</a>
+        </p>
+        <p>
           <code>printf "%s@%s.co.uk" "aleksandr" "vorontsov"</code>
         </p>
       </div>
