--- a/src/home.ejs
+++ b/src/home.ejs
@@ -1,29 +1,60 @@
 <div class="container-fluid">
   <div class="header vertical-center">
-    <div class=" text-center horizontal-center">
+    <div class="text-center horizontal-center gap-8">
       <div class="gradient-text">
         <h1>Aleksandr Vorontsov</h1>
       </div>
-      <div class="p--8">
+      <div>
         <p>
-          Full Stack Engineer at <a href="https://artificial.io/" target="_blank" rel="noopener noreferrer"
-            class="purple bold">Artificial</a>
-        </p>
-        <p>
-          <code>printf "%s@%s.co.uk" "aleksandr" "vorontsov"</code>
+          Full Stack Engineer at
+          <a
+            href="https://artificial.io/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="purple bold"
+            >Artificial</a
+          >
         </p>
       </div>
-      <div class="p--8">
-        <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer"
-          href="https://www.linkedin.com/in/aleksvorontsov">
-          <img height="25" width="25" src="https://vorontsov.co.uk/images/linkedin.svg" alt="linkedin logo" />
+      <div>
+        <a
+          class="purple h4 p--8 icon-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="/AleksandrVorontsov-CV.pdf"
+        >
+          <img
+            height="25"
+            width="25"
+            src="https://vorontsov.co.uk/images/cv.svg"
+            alt="CV logo"
+          />
         </a>
-        <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer"
-          href="https://www.github.com/a-vorontsov">
-          <img height="25" width="25" src="https://vorontsov.co.uk/images/github.svg" alt="github logo" />
+        <a
+          class="purple h4 p--8 icon-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://www.github.com/a-vorontsov"
+        >
+          <img
+            height="25"
+            width="25"
+            src="https://vorontsov.co.uk/images/github.svg"
+            alt="github logo"
+          />
         </a>
-        <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer" href="/AleksandrVorontsov-CV.pdf">
-          <img height="25" width="25" src="https://vorontsov.co.uk/images/cv.svg" alt="CV logo" />
+        <a
+          class="purple h4 p--8 icon-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://www.linkedin.com/in/aleksvorontsov"
+        >
+          <img
+            height="25"
+            width="25"
+            src="https://vorontsov.co.uk/images/linkedin.svg"
+            alt="linkedin logo"
+          />
         </a>
       </div>
     </div>
