--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,12 +16,12 @@
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
   <meta name="theme-color" content="#7367f0" />
   <meta name="apple-mobile-web-app-status-bar-style" content="#7367f0">
-  <link rel="stylesheet" type="text/css" href="https://vorontsov.co.uk/css/stylesheet.min.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.min.css" media="screen" />
   <link rel="shortcut icon" type="image/png" href="https://vorontsov.co.uk/images/favicon.png" media="screen" async />
 
 <body>
   <%- include ("home") -%>
-  <hr class="purple" style="width: 50%; filter: blur(1px);" />
+  <hr class="purple" style="width: 50%; filter: blur(1px); margin: 0 auto;" />
   <%- include ("projects", {projects: projects}) -%>
   <footer class="footer text-center">
     <a href="https://1mb.club/" class="purple bold" target="_blank" rel="noopener noreferrer">1MB club</a> | <a href="https://github.com/a-vorontsov/a-vorontsov.github.io" class="purple bold" target="_blank" rel="noopener noreferrer">Source code</a>
