fix: update css url

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,7 +16,7 @@
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
   <meta name="theme-color" content="#7367f0" />
   <meta name="apple-mobile-web-app-status-bar-style" content="#7367f0">
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.min.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="https://vorontsov.co.uk/css/stylesheet.min.css" media="screen" />
   <link rel="shortcut icon" type="image/png" href="https://vorontsov.co.uk/images/favicon.png" media="screen" async />
 
 <body>
